--- a/projects/chatgpt/llm functions agent.ipynb
+++ b/projects/chatgpt/llm functions agent.ipynb
@@ -12,17 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "import openai\n",
     "from projects.chatgpt.agents.LLMFunctionsAgent import LLMFunctionsAgent\n",
@@ -42,22 +33,20 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-09T23:11:32.578199Z",
-     "start_time": "2023-12-09T23:11:32.522548Z"
+     "end_time": "2023-12-09T23:33:58.950504Z",
+     "start_time": "2023-12-09T23:33:58.762427Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "init\n",
-      "\n",
-      "---- found function with tool_data: transaction_query\n"
+      "init\n"
      ]
     }
    ],
@@ -67,7 +56,7 @@
     "llm_functions_agent = LLMFunctionsAgent(openai=openai)\n",
     "\n",
     "def inference(question):\n",
-    "    llm_functions_agent.inference(question)\n"
+    "    return llm_functions_agent.inference(question)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -75,52 +64,37 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-09T23:23:19.473740Z",
-     "start_time": "2023-12-09T23:23:19.440267Z"
+     "end_time": "2023-12-09T23:34:00.863819Z",
+     "start_time": "2023-12-09T23:34:00.549686Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------- inference ------------\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'How much did I spend in April of 2022?'}]\n",
-      "does_function exist: transaction_query is True\n",
-      "calling function: transaction_query\n",
-      "calling function transaction_query\n",
-      "query: SELECT SUM(amount) AS total_spent FROM Transaction WHERE date >= '2022-04-01' AND date <= '2022-04-30'\n",
-      "result: total_spent\r\n",
-      "-2174.0600000000013\r\n",
-      "\n",
-      "function result: total_spent\r\n",
-      "-2174.0600000000013\r\n",
-      "\n",
-      "------- inference ------------\n",
-      "sending messages: [{'role': 'system', 'content': 'You are a helpful assistant that answers questions accurately, without making up facts.'}, {'role': 'user', 'content': 'How much did I spend in April of 2022?'}, {'role': 'assistant', 'tool_calls': [<OpenAIObject id=call_SgDJSEFVkmeI1FSsG9ypoOOt at 0x7fc3603fe090> JSON: {\n",
-      "  \"id\": \"call_SgDJSEFVkmeI1FSsG9ypoOOt\",\n",
-      "  \"type\": \"function\",\n",
-      "  \"function\": {\n",
-      "    \"name\": \"transaction_query\",\n",
-      "    \"arguments\": \"{\\n  \\\"postgres_sql_query\\\": \\\"SELECT SUM(amount) AS total_spent FROM Transaction WHERE date >= '2022-04-01' AND date <= '2022-04-30'\\\"\\n}\"\n",
-      "  }\n",
-      "}]}, {'role': 'tool', 'content': 'total_spent\\r\\n-2174.0600000000013\\r\\n', 'tool_call_id': 'call_SgDJSEFVkmeI1FSsG9ypoOOt', 'name': 'transaction_query'}]\n",
-      "chatgpt response: \n",
-      " You spent $2,174.06 in April of 2022.\n",
-      "answer received in 4.0412678718566895 seconds.\n"
+      "transaction_query called with query: \n",
+      "SELECT SUM(amount) FROM Transaction WHERE date >= '2022-03-01' AND date < '2022-05-01'\n",
+      "query result:\n",
+      " sum\r\n",
+      "-1987.3300000000022\r\n",
+      "result: \n",
+      " You spent a total of $1987.33 in March and April of 2022.\n"
      ]
     }
    ],
    "source": [
     "%autoreload\n",
     "\n",
-    "inference(\"\"\"\n",
-    "How much did I spend in April of 2022?\n",
-    "\"\"\".strip())"
+    "result = inference(\"\"\"\n",
+    "How much did I spend in March and April of 2022?\n",
+    "\"\"\".strip())\n",
+    "\n",
+    "print(f\"result: \\n {result}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -128,8 +102,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-09T23:24:38.471490Z",
-     "start_time": "2023-12-09T23:24:34.414465Z"
+     "end_time": "2023-12-09T23:37:33.763236Z",
+     "start_time": "2023-12-09T23:37:30.872953Z"
     }
    }
   },
@@ -180,7 +154,7 @@
     "llm_functions_agent = LLMFunctionsAgent(openai=openai)\n",
     "\n",
     "def inference(question):\n",
-    "    llm_functions_agent.inference(question)\n",
+    "    return llm_functions_agent.inference(question)\n",
     "    \n",
     "inference(\"\"\"\n",
     "How much did I spend between 3/10/23 and and 3/20/23?\n",
