--- a/projects/slack/slack messages.ipynb
+++ b/projects/slack/slack messages.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xoxb-504747840452-6122239847377-lqnl3KHxCMGq5kXil0uzJbqr\n"
+      "xoxb-504747840452-6362514126177-AJT0TtkWaJ8tACiZhIgbe2pl\n"
      ]
     }
    ],
@@ -25,6 +25,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-12-15T03:01:18.042872Z",
+     "start_time": "2023-12-15T03:01:18.037929Z"
     }
    }
   },
@@ -63,7 +67,8 @@
       "channel name: religion-and-philosophy, id: C02DBMY736F\n",
       "channel name: sofi, id: C02HZGC4S66\n",
       "channel name: libertariansocialism, id: C0315BSBEDT\n",
-      "channel name: chatgpt, id: C0515AB7ZU6\n"
+      "channel name: chatgpt, id: C0515AB7ZU6\n",
+      "channel name: pickleball, id: C064BJQUWBC\n"
      ]
     }
    ],
@@ -77,6 +82,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-12-15T03:01:23.127823Z",
+     "start_time": "2023-12-15T03:01:21.010310Z"
     }
    }
   },
